--- a/wherehows-frontend/conf/jaas.conf
+++ b/wherehows-frontend/conf/jaas.conf
@@ -1,5 +1,10 @@
-// This is just a sample JAAS config that uses LDAP for authentication.
+// This is a sample JAAS config that uses the following login modules
+// DummyLoginModule -- this module can work with a username (that is in user table) and any password
+// LdapLoginModule -- this module uses LDAP for authentication
+
 WHZ-Authentication {
+  security.DummyLoginModule sufficient;
+
   com.sun.security.auth.module.LdapLoginModule sufficient
   userProvider="ldap://ldap-svr/ou=people,dc=example,dc=com"
   authIdentity="{USERNAME}"
