--- a/wherehows-web/package.json
+++ b/wherehows-web/package.json
@@ -41,7 +41,7 @@
     "ember-ace": "^1.3.1",
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^1.0.0",
-    "ember-cli": "~2.18.0",
+    "ember-cli": "^3.3.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.12.0",
     "ember-cli-bootstrap-sassy": "^0.5.8",
@@ -93,7 +93,7 @@
     "loader.js": "^4.2.3",
     "node-sass": "^4.7.2",
     "prettier": "^1.14.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "dynamic-link": "^0.2.3",
