--- a/wherehows-web/package.json
+++ b/wherehows-web/package.json
@@ -58,6 +58,7 @@
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-template-lint": "^0.7.6",
     "ember-cli-typescript": "^1.3.3",
     "ember-cli-uglify": "^2.0.0",
     "ember-composable-helpers": "^2.1.0",
@@ -77,7 +78,7 @@
     "ember-resolver": "^4.0.0",
     "ember-sinon": "^1.0.1",
     "ember-sinon-qunit": "^2.1.0",
-    "ember-source": "~2.18.0",
+    "ember-source": "^3.3.1",
     "ember-symbol-observable": "^1.0.1",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
@@ -107,7 +108,7 @@
     "ember-radio-button": "^1.2.1",
     "ember-simple-auth": "^1.4.0",
     "ember-tether": "0.4.1",
-    "ember-tooltips": "^2.9.2",
+    "ember-tooltips": "https://github.com/mattgraham1995/ember-tooltips#06112adb703f1701eef2257bf7690434af2c7444",
     "ember-truth-helpers": "^2.0.0",
     "eslint-plugin-typescript": "^0.12.0",
     "jquery": "^3.3.0",
