Update Gralde to 4.9 & Scala to 2.11 (#1315)
* Update Gralde to 4.9 & Scala to 2.11

* Update play.gradle

* Update repositories.gradle

--- a/gradle/scripts/play.gradle
+++ b/gradle/scripts/play.gradle
@@ -7,7 +7,7 @@ tasks.withType(PlayRun) {
 model {
     components {
         play {
-            platform play: '2.4.11', scala: '2.10'
+            platform play: '2.4.11', scala: '2.11', java: '1.8'
 
             binaries.all {
                 tasks.withType(PlatformScalaCompile) {
