--- a/gradle/scripts/repositories.gradle
+++ b/gradle/scripts/repositories.gradle
@@ -3,15 +3,14 @@ repositories {
     dirs 'extralibs'
   }
   mavenCentral()
-  jcenter()
   maven {
-    name "typesafe-maven-release"
-    url "https://repo.typesafe.com/typesafe/maven-releases"
+      name "lightbend-maven-release"
+      url "https://repo.lightbend.com/lightbend/maven-releases"
   }
   ivy {
-    name "typesafe-ivy-release"
-    url "https://repo.typesafe.com/typesafe/ivy-releases"
-    layout "ivy"
+      name "lightbend-ivy-release"
+      url "https://repo.lightbend.com/lightbend/ivy-releases"
+      layout "ivy"
   }
   maven { // this is required for hive
     name "conjars-maven-release"
