--- a/gradle/scripts/dependency.gradle
+++ b/gradle/scripts/dependency.gradle
@@ -27,14 +27,16 @@ ext.externalDependency = [
     "logback"             : "ch.qos.logback:logback-classic:1.2.3",
     "jasypt"              : "org.jasypt:jasypt:1.9.2",
     "mockito"             : "org.mockito:mockito-core:2.13.0",
+    "festAssert"          : "org.easytesting:fest-assert-core:2.0M10",
+    "systemRules"         : "com.github.stefanbirkner:system-rules:1.16.0",
 
-    "play_java_jdbc"      : "com.typesafe.play:play-java-jdbc_2.10:2.4.11",
-    "play_java_ws"        : "com.typesafe.play:play-java-ws_2.10:2.4.11",
-    "play_cache"          : "com.typesafe.play:play-cache_2.10:2.4.11",
-    "play_filter"         : "com.typesafe.play:filters-helpers_2.10:2.4.11",
+    "play_java_jdbc"      : "com.typesafe.play:play-java-jdbc_2.11:2.4.11",
+    "play_java_ws"        : "com.typesafe.play:play-java-ws_2.11:2.4.11",
+    "play_cache"          : "com.typesafe.play:play-cache_2.11:2.4.11",
+    "play_filter"         : "com.typesafe.play:filters-helpers_2.11:2.4.11",
     "typesafe_config"     : "com.typesafe:config:1.3.1",
     "netty"               : "io.netty:netty:3.10.6.Final",
-    "akka"                : "com.typesafe.akka:akka-actor_2.10:2.3.16",
+    "akka"                : "com.typesafe.akka:akka-actor_2.11:2.3.16",
     "spring_jdbc"         : "org.springframework:spring-jdbc:4.1.9.RELEASE",
 
     "kafka_clients"       : "org.apache.kafka:kafka-clients:0.10.2.1",
