--- a/wherehows-web/package.json
+++ b/wherehows-web/package.json
@@ -28,17 +28,17 @@
     "@types/lodash": "^4.14.83",
     "@types/qunit": "^2.5.2",
     "@types/rsvp": "^4.0.2",
-    "@zestia/ember-simple-infinite-scroller": "^2.0.2",
+    "@zestia/ember-simple-infinite-scroller": "^3.0.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "broccoli-asset-rev": "^2.7.0",
+    "broccoli-asset-rev": "^3.0.0",
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^3.0.0",
     "codecov": "^3.0.0",
-    "ember-ace": "^1.3.1",
+    "ember-ace": "^2.0.0",
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^1.0.0",
     "ember-cli": "^3.3.0",
@@ -46,11 +46,11 @@
     "ember-cli-babel": "^6.12.0",
     "ember-cli-bootstrap-sassy": "^0.5.8",
     "ember-cli-code-coverage": "^1.0.0-beta.4",
-    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-dependency-lint": "^1.0.3",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-eyeglass": "^5.0.0",
-    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-moment-shim": "^3.5.0",
@@ -64,23 +64,24 @@
     "ember-concurrency": "^0.8.15",
     "ember-decorators": "^2.0.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^5.1.1",
+    "ember-fetch": "5.1.1",
     "ember-font-awesome": "^4.0.0-rc.2",
     "ember-highcharts": "^1.0.0",
-    "ember-inflector": "^2.2.0",
+    "ember-inflector": "2.3.0",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.4.0",
     "ember-medium-editor": "^0.1.4",
     "ember-metrics": "^0.12.1",
-    "ember-power-calendar": "^0.7.1",
+    "ember-power-calendar": "^0.9.0",
+    "ember-power-calendar-moment": "^0.1.3",
     "ember-power-select-typeahead": "^0.7.0",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^5.0.1",
     "ember-sinon": "^1.0.1",
     "ember-sinon-qunit": "^2.1.0",
     "ember-source": "^3.3.1",
     "ember-symbol-observable": "^1.0.1",
-    "eslint": "^4.15.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint": "^5.4.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.6.2",
@@ -99,7 +100,7 @@
     "bootstrap": "3.3.7",
     "dynamic-link": "^0.2.3",
     "ember-aupac-typeahead": "3.1.0",
-    "ember-cli-mirage": "0.4.1",
+    "ember-cli-mirage": "^0.4.9",
     "ember-cli-string-helpers": "^1.4.0",
     "ember-lodash": "^4.18.0",
     "ember-modal-dialog": "^2.4.1",
@@ -107,8 +108,8 @@
     "ember-power-select": "^2.0.4",
     "ember-radio-button": "^1.2.1",
     "ember-simple-auth": "^1.4.0",
-    "ember-tether": "0.4.1",
-    "ember-tooltips": "https://github.com/mattgraham1995/ember-tooltips#06112adb703f1701eef2257bf7690434af2c7444",
+    "ember-tether": "^1.0.0",
+    "ember-tooltips": "^2.10.0",
     "ember-truth-helpers": "^2.0.0",
     "eslint-plugin-typescript": "^0.12.0",
     "font-awesome": "^4.7.0",
@@ -116,10 +117,10 @@
     "jquery-jsonview": "^1.2.3",
     "jquery-treegrid": "^0.3.0",
     "json-human": "https://github.com/marianoguerra/json.human.js#0.1.1",
-    "marked": "^0.3.6",
-    "medium-editor": "5.14.4",
+    "marked": "^0.5.0",
+    "medium-editor": "^5.23.3",
     "scrollmonitor": "^1.2.4",
-    "typescript-eslint-parser": "^17.0.1"
+    "typescript-eslint-parser": "^18.0.0"
   },
   "engines": {
     "node": ">= 8.*"
