adds config options for avatar entities

--- a/wherehows-frontend/conf/application.conf
+++ b/wherehows-frontend/conf/application.conf
@@ -87,5 +87,17 @@ lineage.look.back.time = 60
 lineage.look.back.time = ${?LINEAGE_LOOK_BACK_TIME}
 
 # Tracking
+# ~~~~~
+tracking.piwik.siteid = "change_to_piwik_site_id"
 tracking.piwik.siteid = ${?PIWIK_SITE_ID}
+tracking.piwik.url = "change_to_piwik_endpoint_url"
 tracking.piwik.url = ${?PIWIK_URL}
+
+# Avatar Entity
+# ~~~~~
+# Defines properties to be used to generate avatar entity url e.g. people, organisations
+linkedin.links.avi.urlPrimary = "change_to_avi_url"
+linkedin.links.avi.urlPrimary = ${?WHZ_AVI_PRIMARY}
+
+linkedin.links.avi.urlFallback = "change_to_avi_fallback_url"
+linkedin.links.avi.urlFallback = ${?WHZ_AVI_FALLBACK}
