--- a/wherehows-web/package.json
+++ b/wherehows-web/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^2.0.1",
+    "@ember-decorators/runloop": "ember-decorators/runloop",
     "@types/ember": "^2.8.32",
     "@types/ember-qunit": "^3.0.3",
     "@types/ember-test-helpers": "^0.7.1",
@@ -45,6 +46,7 @@
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.12.0",
     "ember-cli-bootstrap-sassy": "^0.5.8",
+    "ember-cli-cjs-transform": "^1.3.0",
     "ember-cli-code-coverage": "^1.0.0-beta.4",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-dependency-lint": "^1.0.3",
@@ -119,6 +121,7 @@
     "json-human": "https://github.com/marianoguerra/json.human.js#0.1.1",
     "marked": "^0.5.0",
     "medium-editor": "^5.23.3",
+    "restliparams": "^1.0.1",
     "scrollmonitor": "^1.2.4",
     "typescript-eslint-parser": "^18.0.0"
   },
