--- a/wherehows-web/ember.gradle
+++ b/wherehows-web/ember.gradle
@@ -2,7 +2,10 @@ apply plugin: "com.moowork.node"
 
 node {
   // Version of node to use.
-  version = '8.11.2'
+  version = '8.12.0'
+
+  // Version of Yarn to use.
+  yarnVersion = '1.10.1'
 
   // Base URL for fetching node distributions (change if you have a mirror).
   distBaseUrl = 'https://nodejs.org/dist'
@@ -57,7 +60,6 @@ task execYarn(type: YarnTask) {
 
 clean {
   delete 'node_modules'
-  delete 'bower_components'
   delete 'dist'
   delete 'tmp'
 }
