Update the build system to work with the new open source process (#1438)

--- a/wherehows-web/build.gradle
+++ b/wherehows-web/build.gradle
@@ -1,10 +1,12 @@
+apply plugin: 'distribution'
 apply from: 'ember.gradle'
 
 configurations {
   assets
 }
 
-task distZip(type: Zip, dependsOn: emberBuild) {
+distZip {
+  dependsOn emberBuild
   baseName 'wherehows-web'
   from 'dist'
 }
