--- a/gradle/scripts/dependency.gradle
+++ b/gradle/scripts/dependency.gradle
@@ -30,10 +30,11 @@ ext.externalDependency = [
     "festAssert"          : "org.easytesting:fest-assert-core:2.0M10",
     "systemRules"         : "com.github.stefanbirkner:system-rules:1.16.0",
 
-    "play_java_jdbc"      : "com.typesafe.play:play-java-jdbc_2.11:2.4.11",
-    "play_java_ws"        : "com.typesafe.play:play-java-ws_2.11:2.4.11",
-    "play_cache"          : "com.typesafe.play:play-cache_2.11:2.4.11",
-    "play_filter"         : "com.typesafe.play:filters-helpers_2.11:2.4.11",
+    "play_java_jdbc"      : "com.typesafe.play:play-java-jdbc_2.11:2.4.6",
+    "play_java_ws"        : "com.typesafe.play:play-java-ws_2.11:2.4.6",
+    "play_cache"          : "com.typesafe.play:play-cache_2.11:2.4.6",
+    "play_filter"         : "com.typesafe.play:filters-helpers_2.11:2.4.6",
+    "play_docs"           : "com.typesafe.play:play-docs_2.11:2.4.6",
     "typesafe_config"     : "com.typesafe:config:1.3.1",
     "netty"               : "io.netty:netty:3.10.6.Final",
     "akka"                : "com.typesafe.akka:akka-actor_2.11:2.3.16",
