--- a/wherehows-web/package.json
+++ b/wherehows-web/package.json
@@ -27,6 +27,7 @@
     "@types/ember-testing-helpers": "^0.0.3",
     "@types/ember__test-helpers": "^0.7.0",
     "@types/lodash": "^4.14.83",
+    "@types/nearley": "^2.11.0",
     "@types/qunit": "^2.5.2",
     "@types/rsvp": "^4.0.2",
     "@zestia/ember-simple-infinite-scroller": "^3.0.2",
@@ -120,6 +121,7 @@
     "json-human": "https://github.com/marianoguerra/json.human.js#0.1.1",
     "marked": "^0.5.0",
     "medium-editor": "^5.23.3",
+    "nearley": "^2.15.1",
     "restliparams": "^1.0.1",
     "scrollmonitor": "^1.2.4",
     "typescript-eslint-parser": "^18.0.0"
@@ -134,5 +136,10 @@
         "git add"
       ]
     }
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/ember-nearley"
+    ]
   }
 }
