Change shebang to bash for rename-namespace script

--- a/metadata-events/mxe-schemas/build.gradle
+++ b/metadata-events/mxe-schemas/build.gradle
@@ -12,7 +12,7 @@ task copyRenamedAvsc(type: Copy, dependsOn: copyOriginalAvsc) {
 }
 
 task renameNamespace(type: Exec, dependsOn: copyRenamedAvsc) {
-  commandLine 'sh', './rename-namespace.sh'
+  commandLine './rename-namespace.sh'
 }
 
 build.dependsOn renameNamespace
