--- a/docker/elasticsearch/docker-compose.yml
+++ b/docker/elasticsearch/docker-compose.yml
@@ -1,9 +1,10 @@
 ---
-version: '3.3'
+version: '3.5'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.8
     container_name: elasticsearch
+    hostname: elasticsearch
     ports:
       - "9200:9200"
     environment:
@@ -13,7 +14,12 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.8
     container_name: kibana
+    hostname: kibana
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
+
+networks:
+  default:
+    name: datahub_network
