--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -1,8 +1,9 @@
 ---
-version: '3.3'
+version: '3.5'
 services:
   mysql:
     container_name: mysql
+    hostname: mysql
     image: mysql:latest
     restart: always
     environment:
@@ -11,7 +12,7 @@ services:
       MYSQL_PASSWORD: 'datahub'
       MYSQL_ROOT_PASSWORD: 'datahub'
     ports:
-      - "3308:3306"
+      - "3306:3306"
     volumes:
       - ../mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
 
@@ -96,6 +97,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.8
     container_name: elasticsearch
+    hostname: elasticsearch
     ports:
       - "9200:9200"
     environment:
@@ -105,7 +107,35 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.8
     container_name: kibana
+    hostname: kibana
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
+
+  datahub-gms:
+    image: keremsahin/datahub-gms:latest
+    hostname: datahub-gms
+    container_name: datahub-gms
+    ports:
+      - "8080:8080"
+    environment:
+      - ebean.datasourceUsername=datahub
+      - ebean.datasourcePassword=datahub
+      - ebean.datasourceUrl=jdbc:mysql://mysql:3306/datahub
+      - ebean.datasourceDriver=com.mysql.jdbc.Driver
+      - kafka.bootstrapServers=broker:29092
+      - kafka.schemaRegistryUrl=http://schema-registry:8081
+      - elasticsearch.hosts=elasticsearch
+      - elasticsearch.port=9200
+      - DATAHUB_MYSQL_HOST=mysql
+      - DATAHUB_MYSQL_PORT=3306
+    depends_on:
+      - elasticsearch
+      - broker
+      - mysql
+      - schema-registry
+
+networks:
+  default:
+    name: datahub_network
