--- a/docker/gms/Dockerfile
+++ b/docker/gms/Dockerfile
@@ -2,6 +2,9 @@ FROM openjdk:8
 
 MAINTAINER Kerem Sahin ksahin@linkedin.com
 
+COPY . datahub-src
+RUN cd datahub-src && ./gradlew :gms:war:build -Prest.model.compatibility=ignore
+
 RUN apt-get update && apt-get install -y wget
 
 RUN wget https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-runner/9.4.20.v20190813/jetty-runner-9.4.20.v20190813.jar
@@ -9,7 +12,5 @@ RUN wget https://github.com/vishnubob/wait-for-it/blob/master/wait-for-it.sh
 
 EXPOSE 8080
 
-COPY gms/war/build/libs/war.war gms.war
-
 CMD ["./wait-for-it.sh", "$DATAHUB_MYSQL_HOST:$DATAHUB_MYSQL_PORT"]
-CMD ["java", "-jar", "jetty-runner-9.4.20.v20190813.jar", "gms.war"]
+CMD ["java", "-jar", "jetty-runner-9.4.20.v20190813.jar", "datahub-src/gms/war/build/libs/war.war"]
