Fix docker build for datahub-frontend by adding command line arguments to run command

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -18,4 +18,9 @@ RUN wget https://github.com/vishnubob/wait-for-it/blob/master/wait-for-it.sh
 EXPOSE 9001
 
 CMD ["./wait-for-it.sh", "$DATAHUB_GMS_HOST:$DATAHUB_GMS_PORT"]
-CMD ["datahub-frontend/bin/playBinary"]
+
+CMD ["datahub-frontend/bin/playBinary", "-Xms512m", "-Xmx1024m", "-Dhttp.port=9001", \
+    "-Dconfig.file=datahub-frontend/conf/application.conf", \
+    "-Djava.security.auth.login.config=datahub-frontend/conf/jaas.conf", \
+    "-Dlogback.configurationFile=datahub-frontend/conf/logback.xml", \
+    "-Dlogback.debug=true"]
