--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -145,6 +145,9 @@ services:
     environment:
       - DATAHUB_GMS_HOST=datahub-gms
       - DATAHUB_GMS_PORT=8080
+      - DHUB_SECRET=YouKnowNothing
+      - DHUB_APP_VERSION=1.0
+      - DHUB_PLAY_MEM_BUFFER_SIZE=10MB
     depends_on:
       - datahub-gms
 
