Add back gms.properties (ignoreIfNotExists) to enable Dockerless deployment of datahub-gms

--- a/gms/war/src/main/webapp/WEB-INF/web.xml
+++ b/gms/war/src/main/webapp/WEB-INF/web.xml
@@ -42,4 +42,6 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
+  <context:property-placeholder location="classpath:gms.properties" />
+
 </web-app>
