--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ jdk:
   - openjdk8
 
 script:
-  - ./gradlew check assemble -Prest.model.compatibility=ignore
-  - ./gradlew emberCoverage
+  - ./gradlew build
