Fix dockerbuild & docker-compose for datahub-gms and start using Dockerize instead of wait-for-it for orchestration

--- a/docker/gms/Dockerfile
+++ b/docker/gms/Dockerfile
@@ -3,15 +3,22 @@ FROM openjdk:8
 MAINTAINER Kerem Sahin ksahin@linkedin.com
 
 COPY . datahub-src
-RUN cd datahub-src && ./gradlew :gms:war:build -Prest.model.compatibility=ignore \
+RUN cd datahub-src && ./gradlew :gms:war:build \
     && cp gms/war/build/libs/war.war ../gms.war && cd .. && rm -rf datahub-src
 
 RUN apt-get update && apt-get install -y wget
 
 RUN wget https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-runner/9.4.20.v20190813/jetty-runner-9.4.20.v20190813.jar
-RUN wget https://github.com/vishnubob/wait-for-it/blob/master/wait-for-it.sh
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 EXPOSE 8080
 
-CMD ["./wait-for-it.sh", "$DATAHUB_MYSQL_HOST", "$DATAHUB_KAFKA_BROKER_HOST", "$DATAHUB_ELASTICSEARCH_HOST"]
-CMD ["java", "-jar", "jetty-runner-9.4.20.v20190813.jar", "gms.war"]
+CMD dockerize -wait tcp://$EBEAN_DATASOURCE_HOST \
+            -wait tcp://$KAFKA_BOOTSTRAP_SERVER \
+            -wait http://$ELASTICSEARCH_HOST:$ELASTICSEARCH_PORT \
+            -timeout 60s \
+            java -jar jetty-runner-9.4.20.v20190813.jar gms.war
