Rename environment variables for datahub-frontend

--- a/datahub-frontend/conf/application.conf
+++ b/datahub-frontend/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.http.secret.key = ${DHUB_SECRET}
+play.http.secret.key = ${DATAHUB_SECRET}
 
 # The application languages
 # ~~~~~
@@ -19,7 +19,7 @@ play.application.loader = play.inject.guice.GuiceApplicationLoader
 # Play http parser settings
 # #
 # # Increase default buffer size to handle large post request
-play.http.parser.maxMemoryBuffer = ${DHUB_PLAY_MEM_BUFFER_SIZE}
+play.http.parser.maxMemoryBuffer = ${DATAHUB_PLAY_MEM_BUFFER_SIZE}
 
 # TODO: Disable legacy URL encoding eventually
 play.modules.disabled += "play.api.mvc.CookiesModule"
@@ -43,7 +43,7 @@ play.modules.enabled += "play.api.mvc.LegacyCookiesModule"
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-app.version = ${DHUB_APP_VERSION}
+app.version = ${DATAHUB_APP_VERSION}
 
 dataset.hdfs_browser.link = ""
 linkedin.internal = true
@@ -55,10 +55,10 @@ linkedin.show.dataset.health = true
 linkedin.suggestion.confidence.threshold = "50"
 
 tracking.piwik.siteid = "0"
-tracking.piwik.siteid = ${?DHUB_PIWIK_SITEID}
+tracking.piwik.siteid = ${?DATAHUB_PIWIK_SITEID}
 
 tracking.piwik.url = ""
-tracking.piwik.url = ${?DHUB_PIWIK_URL}
+tracking.piwik.url = ${?DATAHUB_PIWIK_URL}
 
 linkedin.links.avi.urlPrimary = ""
 
