--- a/datahub-frontend/run/frontend.env
+++ b/datahub-frontend/run/frontend.env
@@ -1,12 +1,16 @@
 # Secret Key
-DHUB_SECRET="YouKnowNothing"
+DATAHUB_SECRET="YouKnowNothing"
 
 # App version
-DHUB_APP_VERSION="1.0"
+DATAHUB_APP_VERSION="1.0"
 
 # Play buffer size
-DHUB_PLAY_MEM_BUFFER_SIZE="10MB"
+DATAHUB_PLAY_MEM_BUFFER_SIZE="10MB"
 
 # Piwik tracking configuration
-DHUB_PIWIK_SITEID="94" # change_to_your_piwik_id
-DHUB_PIWIK_URL="//piwik.corp.linkedin.com/piwik/"
+DATAHUB_PIWIK_SITEID="94" # change_to_your_piwik_id
+DATAHUB_PIWIK_URL="//piwik.corp.linkedin.com/piwik/"
+
+# GMS configuration
+DATAHUB_GMS_HOST=localhost
+DATAHUB_GMS_PORT=8080
