No need to use wait-for-it for datahub-frontend Docker container

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -9,15 +9,11 @@ RUN apt-get update && apt-get install -y wget \
 ENV CI=true
 
 COPY . datahub-src
-RUN cd datahub-src && ./gradlew :datahub-frontend:dist -Prest.model.compatibility=ignore \
+RUN cd datahub-src && ./gradlew :datahub-frontend:dist \
     && cp datahub-frontend/build/distributions/datahub-frontend.zip ../datahub-frontend.zip \
     && cd .. && rm -rf datahub-src && unzip datahub-frontend.zip
 
-RUN wget https://github.com/vishnubob/wait-for-it/blob/master/wait-for-it.sh
-
 EXPOSE 9001
-
-CMD ["./wait-for-it.sh", "$DATAHUB_GMS_HOST:$DATAHUB_GMS_PORT"]
 
 ENV JAVA_OPTS=" \
 	-Xms512m \
