Fix quickstart docker-compose by setting renamed environment variables

--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -114,17 +114,15 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - ebean.datasourceUsername=datahub
-      - ebean.datasourcePassword=datahub
-      - ebean.datasourceUrl=jdbc:mysql://mysql:3306/datahub
-      - ebean.datasourceDriver=com.mysql.jdbc.Driver
-      - kafka.bootstrapServers=broker:29092
-      - kafka.schemaRegistryUrl=http://schema-registry:8081
-      - elasticsearch.hosts=elasticsearch
-      - elasticsearch.port=9200
-      - DATAHUB_MYSQL_HOST=mysql:3306
-      - DATAHUB_KAFKA_BROKER_HOST=broker:29092
-      - DATAHUB_ELASTICSEARCH_HOST=elasticsearch:9200
+      - EBEAN_DATASOURCE_USERNAME=datahub
+      - EBEAN_DATASOURCE_PASSWORD=datahub
+      - EBEAN_DATASOURCE_HOST=mysql:3306
+      - EBEAN_DATASOURCE_URL=jdbc:mysql://mysql:3306/datahub
+      - EBEAN_DATASOURCE_DRIVER=com.mysql.jdbc.Driver
+      - KAFKA_BOOTSTRAP_SERVER=broker:29092
+      - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
+      - ELASTICSEARCH_HOST=elasticsearch
+      - ELASTICSEARCH_PORT=9200
     depends_on:
       - elasticsearch
       - broker
@@ -140,9 +138,9 @@ services:
     environment:
       - DATAHUB_GMS_HOST=datahub-gms
       - DATAHUB_GMS_PORT=8080
-      - DHUB_SECRET=YouKnowNothing
-      - DHUB_APP_VERSION=1.0
-      - DHUB_PLAY_MEM_BUFFER_SIZE=10MB
+      - DATAHUB_SECRET=YouKnowNothing
+      - DATAHUB_APP_VERSION=1.0
+      - DATAHUB_PLAY_MEM_BUFFER_SIZE=10MB
     depends_on:
       - datahub-gms
 
