Minor and conf fixes

--- a/datahub-frontend/conf/application.conf
+++ b/datahub-frontend/conf/application.conf
@@ -50,8 +50,6 @@ linkedin.internal = true
 
 linkedin.show.dataset.lineage = true
 
-linkedin.show.dataset.health = true
-
 linkedin.suggestion.confidence.threshold = "50"
 
 tracking.piwik.siteid = "0"
@@ -81,14 +79,15 @@ links.wiki.datasetDecommission = ""
 
 ui.show.ownership.revamp = true
 
-ui.show.staging.banner = true
+ui.show.staging.banner = false
+ui.show.people = false
 
-ui.show.CM.banner = true
+ui.show.CM.banner = false
 ui.show.CM.link = ""
 
 ui.show.stale.search = true
 
-ui.show.live.data.banner = true
+ui.show.live.data.banner = false
 
 ui.show.lineage.graph = true
 
