--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -162,6 +162,19 @@ services:
     depends_on:
       - datahub-gms
 
+  datahub-mae-consumer:
+    image: keremsahin/datahub-mae-consumer:latest
+    hostname: datahub-mae-consumer
+    container_name: datahub-mae-consumer
+    environment:
+      - KAFKA_BOOTSTRAP_SERVER=broker:29092
+      - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
+      - ELASTICSEARCH_HOST=elasticsearch
+      - ELASTICSEARCH_PORT=9200
+    depends_on:
+      - kafka-setup
+      - elasticsearch
+
 networks:
   default:
     name: datahub_network
