--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -174,6 +174,8 @@ services:
     depends_on:
       - kafka-setup
       - elasticsearch
+    command: "bash -c 'while ping -c1 kafka-setup &>/dev/null; do echo waiting for kafka-setup... && sleep 1; done; \
+              echo kafka-setup done! && ./elasticsearch-index-job/bin/elasticsearch-index-job'"
 
 networks:
   default:
