Add upstreams field to dataset search index mapping

--- a/docker/elasticsearch/dataset-index-config.json
+++ b/docker/elasticsearch/dataset-index-config.json
@@ -222,6 +222,10 @@
         "urn": {
           "type": "keyword",
           "normalizer": "my_normalizer"
+        },
+        "upstreams": {
+          "type": "keyword",
+          "normalizer": "my_normalizer"
         }
       }
     }
