--- a/metadata-jobs/mce-consumer-job/build.gradle
+++ b/metadata-jobs/mce-consumer-job/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile project(':metadata-builders')
     compile project(':metadata-events:mxe-schemas')
     compile project(':metadata-events:mxe-avro-1.7')
+    compile project(':metadata-events:mxe-registration')
     compile project(':metadata-events:mxe-utils-avro-1.7')
     compile project(':metadata-dao-impl:restli-dao')
     compile spec.product.pegasus.restliClient
