Changed dependency versions of Data Hub Docker images to release-0.1.1-alpha in quickstart docker-compose

--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -122,7 +122,7 @@ services:
       - ELASTICSEARCH_PORT=9200
 
   datahub-gms:
-    image: keremsahin/datahub-gms:latest
+    image: keremsahin/datahub-gms:release-0.1.1-alpha
     hostname: datahub-gms
     container_name: datahub-gms
     ports:
@@ -144,7 +144,7 @@ services:
       - schema-registry
 
   datahub-frontend:
-    image: keremsahin/datahub-frontend:latest
+    image: keremsahin/datahub-frontend:release-0.1.1-alpha
     hostname: datahub-frontend
     container_name: datahub-frontend
     ports:
@@ -159,7 +159,7 @@ services:
       - datahub-gms
 
   datahub-mae-consumer:
-    image: keremsahin/datahub-mae-consumer:latest
+    image: keremsahin/datahub-mae-consumer:release-0.1.1-alpha
     hostname: datahub-mae-consumer
     container_name: datahub-mae-consumer
     environment:
@@ -174,7 +174,7 @@ services:
               echo kafka-setup done! && ./elasticsearch-index-job/bin/elasticsearch-index-job'"
 
   datahub-mce-consumer:
-    image: keremsahin/datahub-mce-consumer:latest
+    image: keremsahin/datahub-mce-consumer:release-0.1.1-alpha
     hostname: datahub-mce-consumer
     container_name: datahub-mce-consumer
     environment:
