--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,15 @@ language: java
 jdk:
   - openjdk8
 
+install: skip
+
 script:
   - ./gradlew build
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
