Set Elasticsearch Docker container max heap size to 1GB and increase timeout to 120s for Elasticsearch to be ready

--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -99,6 +99,7 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.8
