--- a/docker/elasticsearch/docker-compose.yml
+++ b/docker/elasticsearch/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.8
